# srv_quant_system

./: .env.auto_improve  .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup_fundamentals_pipeline.py  setup_scheduler.bat
.claude/: launch.json  settings.local.json
_claude_scripts/: 00_run_all.bat  01_requirements.bat  02_backtesting.bat  03_pm_journal.bat  04_stress_testing.bat  05_portfolio_risk.bat  06_tests.bat  07_daily_report.bat  08_journal_ui.bat  README.txt
agents/: diagnostics.py  orchestrator.py  run_agents.py
analytics/: __init__.py  alpha_model.py  alpha_research.py  alpha_sources.py  attribution.py  backtest.py  bayesian_optimizer.py  correlation_engine.py  correlation_structure.py  decision_engine.py  dispersion_backtest.py  dss_backtest.py  feature_engine.py  fundamentals_engine.py  leverage_engine.py  macro_calendar.py  market_microstructure.py  methodology_lab.py  ml_adaptive.py  ml_cross_validation.py  ml_ensemble.py  ml_regime_forecast.py  ml_signal_combiner.py  ml_signals.py  multi_strategy.py  optimizer.py  options_engine.py  pair_scanner.py  paper_trader.py  performance_metrics.py  pnl_tracker.py  portfolio_risk.py  quant_review.py  regime_alerts.py  regime_classifier.py  risk_decomposition.py  scoring.py  signal_decay.py  signal_mean_reversion.py  signal_regime_safety.py  (+7 more)
config/: __init__.py  agent_schedule.json  disclaimer.py  settings.py
data/: __init__.py  ensemble_results.json  pipeline.py
data_ops/: __init__.py  freshness.py  health_panel.py  journal.py  orchestrator.py  quality.py  (+4 more)
(+137 files in other folders)
